Fixed separator image sizes on mobile

--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -131,11 +131,16 @@
   margin-left: 3rem;
   transition: transform 0.5s ease-in-out;
   position: relative;
+
+  & h3 {
+    padding: 1rem;
+    background-color: $surface-color;
+  }
   .cover {
     transition: transform 0.5s ease-in-out;
     backface-visibility: hidden;
     transform: perspective(600px) rotateY(0deg);
-    img {
+    & img {
       padding: 0.5rem;
       margin: 0;
       width: max-content;
@@ -143,18 +148,16 @@
   }
 
   .content {
-    padding: 0.5rem;
+    & h3 {
+      padding: 0;
+    }
+    padding: 1rem;
     background-color: $surface-color;
     position: absolute;
     height: 100%;
     width: 100%;
     transition: transform 0.5s ease-in-out;
     transform: perspective(600px) rotateY(180deg);
-  }
-
-  & h3 {
-    padding: 1rem;
-    background-color: $surface-color;
   }
 
   & a {
